Reduced Sync Jitter. :D Also fixed slider tooltip z-index bug.
Former-commit-id: 9c4149f914d366e85e38d3ef14bd0170a06163d7
Former-commit-id: 258bedd43e67efe994aec022891de3b253c092dc [formerly ae6088dc1dce27ff3c01aee8c48bbca1fc1ada70] [formerly d4c6ec86f0428764f26ff4e3448cb3cb4c915738 [formerly 6a430a34babad7026736b30741747a02adef338b]]
Former-commit-id: f9891b54d1e759d95bddc209e3c72c198b6a7f42 [formerly 8b29e30d10013e90f9769f8d0422496674a31d85]
Former-commit-id: 7ea1d7877c73d7df2a27656fa30c3670cf6d9d2f

--- a/css/editor.css
+++ b/css/editor.css
@@ -46,7 +46,6 @@ a#promptIt {
 	font-size: 1.4em;
 }
 
-
 a#updateIt {
 	font-size: 1.2em;
 	font-weight: bold;
@@ -264,6 +263,10 @@ a:active {
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
     margin-right: -250px;
+}
+
+.tooltip.tooltip-main.top, .tooltip-arrow, .tooltip-inner {
+	z-index: 0;
 }
 
 /* Sidebar Styles */
